# CoreBaseApplication

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _config.yml  build.bat  build.sh  build_cba.py  config.json  imgui.ini  index.md  vcpkg.json
.github/workflows/: docs.yml
docs/: Python_Integration_Guide.md  index.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/bindings/: python.md
docs/deployment/: production.md
docs/development/: best-practices.md  performance.md  security.md  setup.md
docs/examples/: advanced-usage.md  basic-usage.md
docs/getting-started/: quick-start.md
docs/modules/: configuration.md  core-api.md  logging.md  monitoring.md  networking.md
examples/python_monitor/config/: default.json
examples/python_monitor/src/: alert_manager.py  console_ui.py  core_interface.py  data_analyzer.py  main.py  system_monitor.py  test_ui.py
examples/python_monitor/src/config/: default.json
examples/python_monitor/tests/: test_bindings.py  test_script.py
examples/test_app/: CMakeLists.txt  config.json
examples/test_app/src/: main.cpp
examples/test_app/templates/cpp_project/: CMakeLists.txt  README.md  template.json
examples/test_app/tests/: CMakeLists.txt  core_test.cpp
src/apps/MonitoringDashboard/: main.cpp
src/apps/cba_gui/: CMakeLists.txt  GuiManager.cpp  GuiManager.h  main.cpp
src/core/: CoreAPI.cpp  CoreAPI.h  CoreCLI.cpp  CoreCLI.h  ProjectTemplate.cpp  ProjectTemplate.h
src/core/AdvancedLogging/: LoggingIntegration.h  RotatingLogger.h
src/core/CoreClass/: ConfigManager.cpp  ConfigManager.h  Core.cpp  Core.h  ErrorHandler.cpp  ErrorHandler.h  IPCManager.cpp  IPCManager.h  LogLevel.h  LogManager.h  ModuleInfo.h  ModuleLoader.cpp  ModuleLoader.h  ModuleManager.cpp  ModuleManager.h  ResourceManager.cpp  ResourceManager.h  SystemResources.h
src/core/Extensions/: EventSystem.h  NetworkManager.h  PerformanceOptimizer.h  PluginSystem.h
src/core/Monitoring/: EventTracker.h  MemoryTracker.h  MonitoringSystem.h  PerformanceMonitor.h  SystemMonitor.cpp  SystemMonitor.h
src/core/Monitoring/GUI/: MonitoringDashboard.cpp  MonitoringDashboard.h  main.cpp
src/core/Patterns/: Command.h  Observer.h  ServiceLocator.h
src/core/Security/: AuthenticationManager.h  CodeObfuscation.h  EncryptionManager.h
src/core/bindings/bridge/JavaBridge/: CoreJavaAPI.java  JavaBindings.cpp  JavaBindings.h  JavaBindings.java  JavaBridge.h
src/core/bindings/bridge/JavaBridge/com/corebase/: ConfigManager.java  ErrorHandler.java
src/core/bindings/bridge/PythonBridge/: CorePythonAPI.py  PythonBridge.h
src/core/bindings/java/: JavaBindings.h  JavaBindings.java
src/core/bindings/nodejs/: README.md  binding.gyp  jest.config.js  package.json  tsconfig.json
src/core/bindings/nodejs/src/: index.ts
src/core/bindings/nodejs/src/native/: config_manager_wrapper.cpp  config_manager_wrapper.h  corebase_addon.cpp  error_handler_wrapper.cpp  error_handler_wrapper.h  network_manager_wrapper.cpp  network_manager_wrapper.h  system_monitor_wrapper.cpp  system_monitor_wrapper.h
src/core/bindings/nodejs/src/types/: index.ts
src/core/bindings/nodejs/tests/: corebase.test.ts  globalSetup.ts  globalTeardown.ts  setup.ts
src/core/bindings/python/: python_bindings.cpp  python_bindings.h  python_bindings.py
src/core/bindings/react/: README.md  babel.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
src/core/bindings/react/src/: index.ts
src/core/bindings/react/src/__tests__/: CoreBaseContext.test.tsx  NetworkStatsDisplay.test.tsx  SystemMonitorDisplay.test.tsx  globalSetup.ts  globalTeardown.ts  setup.ts  useConfigManager.test.tsx  useErrorHandler.test.tsx  useNetworkManager.test.tsx  useSystemMonitor.test.tsx
src/core/bindings/react/src/__tests__/__mocks__/: fileMock.js
src/core/bindings/react/src/__tests__/__mocks__/@corebase/nodejs/: index.js
src/core/bindings/react/src/components/: NetworkStatsDisplay.stories.tsx  NetworkStatsDisplay.tsx  SystemMonitorDisplay.stories.tsx  SystemMonitorDisplay.tsx  index.ts
src/core/bindings/react/src/contexts/: CoreBaseContext.tsx
src/core/bindings/react/src/hooks/: index.ts  useConfigManager.ts  useErrorHandler.ts  useNetworkManager.ts  useSystemMonitor.ts
src/core/bindings/react/src/types/: index.ts
src/core/bindings/rust/: Cargo.toml  build.rs
src/core/bindings/rust/src/: config.rs  error.rs  lib.rs  monitor.rs  network.rs
src/core/tests/: ConfigManager_test.cpp
src/modules/SampleModule/: CMakeLists.txt  SampleModule.cpp  SampleModule.h
src/python_bindings/: python_bindings.cpp
src/tests/: python_bindings_test.cpp
templates/cpp_project/: CMakeLists.txt  README.md  template.json
